--- a/resources/Language/French/strings.xml
+++ b/resources/Language/French/strings.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?><strings>  
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>  
   <string id="33000">Paramètres généraux</string>  
   <string id="33001">Serveur</string>  
   <string id="33002">Nom d'utilisateur</string>  
