--- a/resources/Language/English/strings.xml
+++ b/resources/Language/English/strings.xml
@@ -25,4 +25,6 @@
   <string id="33116">Total</string>
   <string id="33117">Synchronization Successful</string>
   <string id="33118">Enter a search string</string>
+  <string id="33119">User Collections</string>
+  <string id="33120">Your Favorites</string>
 </strings>
