Fill out english (gb and us) translation files.

--- a/resources/language/resource.language.en_us/strings.po
+++ b/resources/language/resource.language.en_us/strings.po
@@ -4,118 +4,122 @@
 # Addon Provider: abrenoch
 msgid ""
 msgstr ""
+"Project-Id-Version: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2022-01-08 13:40+0000\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_US\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
 
 msgctxt "#43000"
 msgid "General Settings"
-msgstr ""
+msgstr "General Settings"
 
 msgctxt "#43001"
 msgid "Server"
-msgstr ""
+msgstr "Server"
 
 msgctxt "#43002"
 msgid "Username"
-msgstr ""
+msgstr "Username"
 
 msgctxt "#43003"
 msgid "Password"
-msgstr ""
+msgstr "Password"
 
 msgctxt "#43004"
 msgid "View Settings"
-msgstr ""
+msgstr "View Settings"
 
 msgctxt "#43005"
 msgid "Max Page Size"
-msgstr ""
+msgstr "Max Page Size"
 
 msgctxt "#43100"
 msgid "Recent Photos"
-msgstr ""
+msgstr "Recent Photos"
 
 msgctxt "#43101"
 msgid "Random Photos"
-msgstr ""
+msgstr "Random Photos"
 
 msgctxt "#43102"
 msgid "Top Rated Photos"
-msgstr ""
+msgstr "Top Rated Photos"
 
 msgctxt "#43103"
 msgid "Browse by Categories"
-msgstr ""
+msgstr "Browse by Categories"
 
 msgctxt "#43104"
 msgid "Browse by Tags"
-msgstr ""
+msgstr "Browse by Tags"
 
 msgctxt "#43105"
 msgid "Search"
-msgstr ""
+msgstr "Search"
 
 msgctxt "#43106"
 msgid "Username and/or password incorrect"
-msgstr ""
+msgstr "Username and/or password incorrect"
 
 msgctxt "#43107"
 msgid "Please check the configuration"
-msgstr ""
+msgstr "Please check the configuration"
 
 msgctxt "#43108"
 msgid "Please check your logs"
-msgstr ""
+msgstr "Please check your logs"
 
 msgctxt "#43109"
 msgid "There was an error retrieving data"
-msgstr ""
+msgstr "There was an error retrieving data"
 
 msgctxt "#43110"
 msgid "Method"
-msgstr ""
+msgstr "Method"
 
 msgctxt "#43111"
 msgid "There was a problem communicating with the server"
-msgstr ""
+msgstr "There was a problem communicating with the server"
 
 msgctxt "#43112"
 msgid "There was a problem synchronizing the server"
-msgstr ""
+msgstr "There was a problem synchronizing the server"
 
 msgctxt "#43113"
 msgid "Search input can not be blank"
-msgstr ""
+msgstr "Search input can not be blank"
 
 msgctxt "#43114"
 msgid "Synchronize Server"
-msgstr ""
+msgstr "Synchronize Server"
 
 msgctxt "#43115"
 msgid "Next Page"
-msgstr ""
+msgstr "Next Page"
 
 msgctxt "#43116"
 msgid "Total"
-msgstr ""
+msgstr "Total"
 
 msgctxt "#43117"
 msgid "Synchronization Successful"
-msgstr ""
+msgstr "Synchronization Successful"
 
 msgctxt "#43118"
 msgid "Enter a search string"
-msgstr ""
+msgstr "Enter a search string"
 
 msgctxt "#43119"
 msgid "User Collections"
-msgstr ""
+msgstr "User Collections"
 
 msgctxt "#43120"
 msgid "Your Favorites"
-msgstr ""
+msgstr "Your Favorites"
